force-app/main/default/objects/Payment__c/fields/is_Paid__c.field-meta.xml
<CustomField>
    <fullName>is_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Paid</label>
    <type>Checkbox</type>
</CustomField>