force-app/main/default/objects/Payment__c/fields/Is_Paid_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Is_Paid_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Invoices</label>
    <type>Checkbox</type>
</CustomField>