force-app/main/default/objects/Payment__c/fields/Is_Pending_invoices__c.field-meta.xml
<CustomField>
    <fullName>Is_Pending_invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending invoices</label>
    <type>Checkbox</type>
</CustomField>