force-app/main/default/objects/Payment__c/fields/Payment_type__c.field-meta.xml
<CustomField>
    <fullName>Payment_type__c</fullName>
    <label>Payment type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subcontractor</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Commissions</fullName>
            </value>
            <value>
                <fullName>Expenses Reimbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>