force-app/main/default/objects/Payment__c/fields/paymentDate__c.field-meta.xml
<CustomField>
    <fullName>paymentDate__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>