force-app/main/default/objects/Payment__c/fields/Pending_invoices_startDate__c.field-meta.xml
<CustomField>
    <fullName>Pending_invoices_startDate__c</fullName>
    <label>Pending invoices start date</label>
    <type>Date</type>
</CustomField>