force-app/main/default/objects/Payment__c/fields/ReceiverId__c.field-meta.xml
<CustomField>
    <fullName>ReceiverId__c</fullName>
    <label>Receiver Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>